kubernetes-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-processing-service-web
  labels:
    app: demo-processing-service-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-processing-service-web
  template:
    metadata:
      labels:
        app: demo-processing-service-web
    spec:
      containers:
        - name: demo-processing-service-web
          image: leeflangjs/demo-processing-service:end-user-demo
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
