kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-processing-service
  labels:
    app: demo-processing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-processing-service
  template:
    metadata:
      labels:
        app: demo-processing-service
    spec:
      containers:
        - name: demo-processing-service
          image: leeflangjs/demo-processing-service:latest
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
